2016-06-16 Massimo Manghi <mxmanghi@apache.org>
    * .: released as 2.3.1

2016-04-13 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: version number set to 2.3.1

2016-04-05 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/form/form.tcl: wrong element created by 'file' method
    * doc/xml/examples.xml: conflicting target fixed

2016-04-05 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/form/form2.tcl: wrong element created by 'file' method

2016-04-04 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.xml: Add 2016 to copyright notice

2016-03-26 Massimo Manghi <mxmanghi@apache.org>
    * .: Relased as 2.3.0

2016-03-18 Massimo Manghi <mxmanghi@apache.org>
    * tclconfig/: reverting to previous release

2016-03-17 Massimo Manghi <mxmanghi@apache.org>
    * tclconfig/tcl.m4,install-sh,ltmain.sh,libtool.m4: updating autotools 
    and libtool macros to the latest versions available

2016-03-07 Massimo Manghi <mxmanghi@apache.org>
    * src/parser/rivetParser.c: Add Apache 2.0 mandatory copyright notice.
    removed unneed inclusion of config.h (cruft left over since many
    years)

2016-02-26 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs.tcl: merging changes done in trunk

2015-12-14 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs/asciiglyphs.tcl: removed debugging lines
    
2015-12-09 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs.tcl: character selection mechanism amended
    * doc/xml/commands.xml: documenting ::rivet::try

2015-12-07 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/asciiglyphs/asciiglyphs.tcl: new file renamed after
    hexglyphs.tcl which now prints more than the hexadecimal character set

2015-12-05 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/try.tcl: new command ::rivet::try wraps core
    same command to trap ::rivet::abort_code and ::rivet::exit interruptions