@@ -1,4 +1,9 @@
 2016-06-16 Massimo Manghi <mxmanghi@apache.org>
+    * doc/xml/commands.xml: manual page for ::rivet::catch rewritten
+    * Changelog: entry for 2.3.1 release corrected (the date was 
+    quite incidentally postponed to 16 June, thus exactly today)
+
+2016-04-16 Massimo Manghi <mxmanghi@apache.org>
     * .: released as 2.3.1
 
 2016-04-13 Massimo Manghi <mxmanghi@apache.org>
